--- a/styles/player.css
+++ b/styles/player.css
@@ -20,3 +20,27 @@
   height: 15px;
   cursor: pointer;
 }
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+}
+.slider:focus {
+  outline: none;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  background: #fff;
+  width: 10px;
+  height: 10px;
+  margin-top: -2.5px;
+  border-radius: 10px;
+}
+.slider::-webkit-slider-runnable-track {
+  background: rgba(255, 255, 255, 0.5);
+  height: 5px;
+  margin-bottom: 5px;
+}
