Custom style scrollbar

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -5,4 +5,25 @@
 body,
 html {
   @apply bg-black text-white;
+  scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  /* background-color: #F5F5F5; */
+  @apply bg-gray-900;
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+  /* background-color: #F5F5F5; */
+  @apply bg-gray-900;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* background-color: #555; */
+  @apply bg-gray-500;
 }
